--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html{ lang: 'en' }
   %head
-    %title Standup Bot by So Fetch
+    %title Standup Bot by MHD
 
     %meta{ charset: 'utf-8' }
     %meta{ content: 'IE=edge', 'http-equiv' => 'X-UA-Compatible' }
@@ -42,5 +42,5 @@
   %footer.footer.container
     %p.text-muted
       Made by
-      = link_to 'So Fetch.', 'http://www.sofetch.io'
+      = link_to 'MHD.', 'https://www.linkedin.com/in/menilik?'
       = image_tag('sf_logo_standup_bot.png')
